# lms_saas

./: LICENSE  README.md  pyproject.toml  site_config.example.json
docs/: BACKUP.md  BRANDING.md  CHARTS.md  COMPLIANCE.md  DATA_IMPORT.md  DESIGN_SYSTEM.md  FRAPPE_CLOUD.md  INTEGRATIONS.md  ONBOARDING.md  PORTAL_ADDONS_PROPOSAL.md  SETUP.md  STAFF_GUIDE.md  STAGING.md  SUPPORT.md  SYSADMIN_GUIDE.md  openapi.yaml  role-admin.md  role-borrower.md  role-branch-manager.md  role-collector.md  role-loan-officer.md
lms_saas/: boot.py  copy.py  hooks.py  install.py  modules.txt  patches.txt  permissions.py  tasks.py
lms_saas/api/: aml.py  announcements.py  appraisals.py  branch_analytics.py  budgeting.py  collateral.py  collections.py  compliance.py  crm.py  dashboard.py  decisioning.py  digests.py  disbursement_hooks.py  documents.py  documents_center.py  feedback.py  field_collection.py  field_visits.py  helpdesk.py  hr.py  insurance.py  inventory.py  investors.py  lms_portal.py  manager.py  manager_books.py  notifications.py  officer.py  payroll.py  portal.py  procurement.py  recruitment.py  regulatory_hub.py  savings_club.py  staff.py  tasks.py  training.py  underwriting.py  wallet_recon.py  webhooks.py  (+1 more)
lms_saas/fixtures/: custom_field.json  property_setter.json
lms_saas/public/: lms-collect.webmanifest
lms_saas/scripts/: load_test_portfolio.py
lms_saas/setup/: bootstrap_books.py  check_notification_log.py  (+21 more)
scripts/: backup-site.sh  create-test-users.sh  frappe-cloud-postinstall.sh  frappe-cloud-seed-demo.sh  frappe-cloud-update.sh  onboard-company.sh
(+279 files in other folders)
